--- a/Forms/forms.html
+++ b/Forms/forms.html
@@ -28,6 +28,7 @@
             <label for="msc">MSc Cs</label><br>
             <input type="radio" id="stat" name="stat" value="Stat">
             <label for="stat">Msc Stat</label><br><br>
+            <h1>This is my Registration Page</h1>
         </form>
         </div>
     </body>
