--- a/Forms/forms.html
+++ b/Forms/forms.html
@@ -3,9 +3,11 @@
         <title>Document</title>
     </head>
     <link rel="stylesheet" href="forms.css">
-    <body>
+      <body>
+        <h1>This is my Registration Page</h1>
         <div class="form">
-        <form>
+        <form  method="POST" 
+                action="https://script.google.com/macros/s/AKfycbzUcZ8GCBsT4nMq8sd_fTqV3p-3zG2cA9J3-Tjtys4FIIY7UUOSe349BzOGwGDZXfo-/exec">
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname" value=""><br>
             <label for="lname">Last name:</label><br>
@@ -22,13 +24,13 @@
             <label for="phone">Phone</label><br>
             <input type="number" id="phone" name="phone"><br>
             <label for="phone">Course</label><br>
-            <input type="radio" id="mca" name="mca" value="Mca">
+            <input type="radio" id="mca" name="course" value="Mca">
             <label for="mca">MCA</label><br>
-            <input type="radio" id="msc" name="msc" value="Msc">
+            <input type="radio" id="msc" name="course" value="Msc">
             <label for="msc">MSc Cs</label><br>
-            <input type="radio" id="stat" name="stat" value="Stat">
+            <input type="radio" id="stat" name="course" value="Stat">
             <label for="stat">Msc Stat</label><br><br>
-            <h1>This is my Registration Page</h1>
+            <input type="submit" value="Submit">    
         </form>
         </div>
     </body>
