--- a/Forms/forms.html
+++ b/Forms/forms.html
@@ -4,7 +4,7 @@
     </head>
     <link rel="stylesheet" href="forms.css">
       <body>
-        <h1>This is my Registration Page</h1>
+        <h1 class="h1">This is my Registration Page</h1>
         <div class="form">
         <form  method="POST" 
                 action="https://script.google.com/macros/s/AKfycbzUcZ8GCBsT4nMq8sd_fTqV3p-3zG2cA9J3-Tjtys4FIIY7UUOSe349BzOGwGDZXfo-/exec">
